# firewallapp

./: Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml
crates/core/: Cargo.toml
crates/core/src/: ca.rs  mitm.rs
crates/rule/: Cargo.toml
crates/rule/src/: lib.rs
crates/rule/src/action/: mod.rs
crates/trust_cert/: Cargo.toml
crates/trust_cert/src/: linux.rs
docs/: CNAME  README.md  index.html  others.md
docs/guide/: 0_cert.md  2_proxy.md  README.md  transparent_proxy.md
docs/rule/: README.md  action.md  filter.md  modify.md
rules/: map_modify.yaml  text_modify.yaml
src/: main.rs
