[package]
name = "trust_cert"
version = "0.0.5"
edition = "2021"
description = "Install certificate to your system trust zone."
homepage = "https://github.com/mvclaudianobj/firewallapp"
repository = "https://github.com/mvclaudianobj/firewallapp"
license = "MIT"

[dependencies]
rcgen = { version = "0.10", features = ["x509-parser"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", default-features = false, features = ["user"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
